# Zengon

./: CMakeLists.txt  Makefile  README.md  intres.org  main  main.cpp  pips.hpp  player.cpp  plyer.h
.github/workflows/: c-cpp.yml  makefile.yml
helper/: phisiks.h
